<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>SmartHome</groupId>
    <artifactId>SmartHome</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <!-- Java Version Configuration -->
        <java.version>21</java.version>

        <!-- Maven Version Configuration -->
        <maven-compiler-plugin>3.10.1</maven-compiler-plugin>


        <!-- Project Encoding Configuration -->
        <project.sourceEncoding>UTF-8</project.sourceEncoding>
        <project.build.sourceEncoding>${project.sourceEncoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.sourceEncoding}</project.reporting.outputEncoding>

        <!-- Junit Version Configuration -->
        <junit-jupiter>5.10.2</junit-jupiter>

        <!-- Coverage configuration -->
        <jacoco-maven-plugin>0.8.11</jacoco-maven-plugin>

        <!-- Pitest Version Configuration-->
        <pitest-maven>1.15.8</pitest-maven>
        <pitest-junit5-plugin>1.1.2</pitest-junit5-plugin>

        <!-- Surefire Version Configuration -->
        <maven-surefire-plugin>3.2.5</maven-surefire-plugin>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

    </properties>

    <dependencies>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>2.9.0</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.4</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Required for running unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin}</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                        <include>**/*TestCase.java</include>
                        <include>**/*IT.java</include>
                    </includes>
                    <!--                    <excludes>-->
                    <!--                        <exclude>**Main**</exclude>-->
                    <!--                    </excludes>-->
                </configuration>
            </plugin>

            <!-- Required for generating coverage report -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin}</version>
                <configuration>
                    <excludes>
                        <exclude>**/ui/**/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Required for generating PIT Mutation reports -->
            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>${pitest-maven}</version>
                <dependencies>
                    <dependency> <!-- Only required because PITest does not work with JUnit5 without it -->
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>${pitest-junit5-plugin}</version>
                    </dependency>
                </dependencies>
                <configuration>

                    <outputFormats>
                        <outputFormat>XML</outputFormat>
                        <outputFormat>HTML</outputFormat>
                    </outputFormats>
                    <!--<verbose>true</verbose>-->
                </configuration>

            </plugin>

        </plugins>
    </build>

</project>